# spacescout

./: .gitignore  CLAUDE.md  DEVELOPMENT.md  README.md  ast-grep.config.yaml  biome.json  index.html  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
.husky/: pre-commit  pre-push
docs/: detailed-implementation-plan.md  mvp-focused-plan.md  mvp-implementation-guide.md  technical-plan.md
images/: logo.afdesign
scripts/: check-file-sizes.ts
src/: main.tsx  routeTree.gen.ts
src-tauri/: .rustfmt.toml  Cargo.toml  clippy.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: dust
src-tauri/src/: lib.rs  main.rs  scanner.rs
src/components/: Breadcrumbs.tsx  ContextMenu.tsx  ScanProgress.tsx  ScanProgressTreemap.tsx  ScanProgressVisualization.tsx  StatusBar.tsx  Treemap.tsx
src/hooks/: useFileSystem.ts
src/pages/: Home.tsx  ScanView.tsx
src/routes/: index.tsx  scan.$path.tsx
src/schemas/: FileSystem.ts
src/services/: FileSystemService.ts
src/styles/: app.css
src/test/: setup.ts
src/utils/: format.test.ts  format.ts
